k8s/n8n/ingress-n8n.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  ingressClassName: nginx
  rules:
  - host: n8n.space-missions.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-n8n
            port:
              number: 5678
